--- a/static/css/main.css
+++ b/static/css/main.css
@@ -887,8 +887,24 @@ h2.title {
 }
 
 .productinfo{
- position:relative;
+ position:relative; 
  height: 450px;
+}
+
+.newdiv{
+ position:relative;
+ width: 100%;
+ height: 100%;
+ display: block;
+}
+
+.testimg{
+ position:absolute;
+ margin:auto;
+ left: 0;
+ right: 0;
+ top:0;
+ bottom:0;
 }
 
 .product-overlay {
