--- a/views/shop.html
+++ b/views/shop.html
@@ -59,38 +59,15 @@
 						<div class="logo pull-left">
 							<a href="/shop/"><img src="/static/images/home/logo.png" alt="" /></a>
 						</div>
-						<div class="btn-group pull-right">
-							<div class="btn-group">
-								<button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-									USA
-									<span class="caret"></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><a href="">Canada</a></li>
-									<li><a href="">UK</a></li>
-								</ul>
-							</div>
-							
-							<div class="btn-group">
-								<button type="button" class="btn btn-default dropdown-toggle usa" data-toggle="dropdown">
-									DOLLAR
-									<span class="caret"></span>
-								</button>
-								<ul class="dropdown-menu">
-									<li><a href="">Canadian Dollar</a></li>
-									<li><a href="">Pound</a></li>
-								</ul>
-							</div>
-						</div>
+						
 					</div>
 					<div class="col-sm-8">
 						<div class="shop-menu pull-right">
 							<ul class="nav navbar-nav">
 								%if logged is not None:
 								<li><a href="/account/"><i class="fa fa-user"></i> {{logged}}</a></li>
-								<li><a href=""><i class="fa fa-star"></i> Your balance: {{stanje}}€</a></li>
+								<li><a href="/account/"><i class="fa fa-star"></i> Your balance: {{stanje}}€</a></li>
 								<li><a href="/new/"><i class="fa fa-crosshairs"></i>Sell Items</a></li>
-								<li><a href="cart.html"><i class="fa fa-shopping-cart"></i> Cart</a></li>
 								%end
 								%if logged is None:
 									<li><a href="/login/"><i class="fa fa-lock"></i>Login</a></li>
@@ -109,38 +86,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-9">
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-								<span class="sr-only">Toggle navigation</span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-								<span class="icon-bar"></span>
-							</button>
-						</div>
-						<div class="mainmenu pull-left">
-							<ul class="nav navbar-nav collapse navbar-collapse">
-								<li><a href="/shop/">Home</a></li>
-								<li class="dropdown"><a href="#" class="active">Shop<i class="fa fa-angle-down"></i></a>
-                                    <ul role="menu" class="sub-menu">
-                                        <li><a href="shop.html" class="active">Products</a></li>
-										<li><a href="product-details.html">Product Details</a></li> 
-										<li><a href="checkout.html">Checkout</a></li> 
-										<li><a href="cart.html">Cart</a></li> 
-										<li><a href="login.html">Login</a></li>
-										
-										
-                                    </ul>
-                                </li> 
-								<li class="dropdown"><a href="#">Blog<i class="fa fa-angle-down"></i></a>
-                                    <ul role="menu" class="sub-menu">
-                                        <li><a href="blog.html">Blog List</a></li>
-										<li><a href="blog-single.html">Blog Single</a></li>
-                                    </ul>
-                                </li> 
-								<li><a href="404.html">404</a></li>
-								<li><a href="contact-us.html">Contact</a></li>
-							</ul>
-						</div>
+						<div class="breadcrumbs">
+							<ol class="breadcrumb">
+							  <li><a href="/shop/">Home</a></li>	
+							  %for stars in starsi:
+							  <li class="active"><a href="/shop/{{stars[0]}}/">{{stars[1]}}</a></li>
+							  %end
+							</ol>
+						</div><!--/breadcrums-->
 					</div>
 					<div class="col-sm-3">
 						<div class="search_box pull-right">
@@ -162,14 +115,7 @@
 	
 	<section>
 		<div class="container">
-		<div class="breadcrumbs">
-				<ol class="breadcrumb">
-				  <li><a href="/shop/">Home</a></li>	
-				  %for stars in starsi:
-				  <li class="active"><a href="/shop/{{stars[0]}}/">{{stars[1]}}</a></li>
-				  %end
-				</ol>
-			</div><!--/breadcrums-->
+
 			<div class="row">
 				<div class="col-sm-3">
 					<div class="left-sidebar">
@@ -468,7 +414,7 @@
 											</div>
 											
 										</div>
-										<a href="#" class="btn btn-default add-to-cart"><i ></i>Details</a>
+										<a href="/item/{{predmeti[i-1][0]}}/" class="btn btn-default add-to-cart"><i ></i>Details</a>
 										</div>
 
 
