--- a/views/shop.html
+++ b/views/shop.html
@@ -362,7 +362,7 @@
 											%pic = slike[predmeti[i-1][0]]
 											
 											<a href="/item/{{predmeti[i-1][0]}}/">
-											<img class="testimg" src="/static/images/uploads/{{pic}}" alt="" style="max-width: 200px; max-height: 250px; ">
+											<img class="testimg" src="/static/images/uploads/{{pic}}" alt="" style="max-width: 200px; max-height: 250px; width:auto">
 													
 											
 										%except:
